# bidkv

./: .gitignore  CHANGELOG.md  README.md  README_zh.md  bidkv-feature-bidkv.bundle  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: bidkv-agent.md
docs/: baseline-specs.md  experiment_protocol.md  reviewer-prompt-sglang-freeze.md  revision_prompt_lc_table.md  sglang-env-setup.md  sglang-portability-slice.md  vllm-route-redesign.md
docs/prompts/: absolute-final-spot-check.md  experiment-section-revision.md  final-consistency-closure.md  final-submission-readiness-check.md  metric-selection-review.md  paper-narrative-revision.md  post-microfix-submission-verdict.md  post-sweep-final-confirmation.md  section2-review-prompt.md  section4-final-evaluation.md  section4-solver-rewrite-evaluation.md  section5-final-evaluation.md  section5-revision-evaluation.md  section67-consistency-evaluation.md  section67-polish-post-evaluation.md  sensitivity_analysis_prompt.md  sglang-refactor-request-level.md  table3-lc-methodology-fix.md
paper/: architecture_diagram_prompt.md  architecture_diagram_prompt_v2.md  bidkv_sc2026.tex  bidkv_sc2026_rate57_backup.tex  gpt_review_prompt.md  references.bib
paper-ad/: bidkv_ad.tex
paper/figures/: fig1_architecture.tex  fig2_algorithm.tex
results/: claim_freeze_early.md
scripts/: analyze_mixed.py  analyze_p95_slo1s.py  analyze_sensitivity.py  analyze_sensitivity_v2.py  analyze_v8.py  analyze_v8_final.py  analyze_variants.py  attribution_analysis.py  compare_v5.py  compare_v6.py  generate_paper_figures.py  generate_real_motivation.py  generate_real_motivation_v1.py  generate_tables_and_figures.py  pilot_rescan_kv_pressure.py  plot_motivation_3panel.py  plot_preliminary_motivation.py  plot_real_motivation.py  plot_victim_heterogeneity.py  relay_remaining.sh  run_bidkv_long_context.sh  run_issue053.sh  run_issue053_pipeline.sh  run_long_context.sh  run_long_context_full.sh  run_motivation_capture.sh  run_motivation_v2.sh  run_remaining_mixed.sh  run_sensitivity.sh  run_sensitivity_v2.sh  run_sglang_v10_radix_aware.sh  run_sglang_v3_resume.sh  run_sglang_v5_native.sh  run_sglang_v6_rate38.sh  run_sglang_v7_rate38.sh  run_sglang_validation_rate57.sh  run_sglang_validation_v1.sh  run_sglang_validation_v2.sh  run_sglang_validation_v3.sh  run_sglang_validation_v4.sh  (+5 more)
tests/: test_baselines.py  test_core.py  test_protocol.py  test_scoring.py  test_sglang_adapter.py  test_sglang_experiment.py  test_vllm_adapter.py  test_vllm_experiment.py  test_vllm_hust_adapter.py
(+469 files in other folders)
